--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -8,35 +8,38 @@ permissions:
   packages: write
   actions: read
 
+permissions:
+  contents: write
+  packages: write
+  actions: read
+
 jobs:
   create-release:
     runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
-      release_id: ${{ steps.create_release.outputs.id }}
     
     steps:
     - uses: actions/checkout@v4
     
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        body: |
-          ## Multi-Platform Release
-          
-          This release includes binaries for:
-          - Linux (x86_64)
-          - Windows (x86_64)
-          - macOS (x86_64)
-          
-          Download the appropriate binary for your platform.
-        draft: false
-        prerelease: false
+      run: |
+        TAG_NAME=${GITHUB_REF#refs/tags/}
+        RELEASE_NAME="Release $TAG_NAME"
+        BODY="## Multi-Platform Release
+
+        This release includes binaries for:
+        - Linux (x86_64)
+        - Windows (x86_64)
+        - macOS (x86_64)
+
+        Download the appropriate binary for your platform."
+        
+        gh release create "$TAG_NAME" \
+          --title "$RELEASE_NAME" \
+          --notes "$BODY" \
+          --latest
 
   build:
     needs: create-release
@@ -90,11 +93,9 @@ jobs:
       run: cargo build --release --target ${{ matrix.target }}
     
     - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ needs.create-release.outputs.upload_url }}
-        asset_path: target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
-        asset_name: ${{ matrix.asset_name }}
-        asset_content_type: application/octet-stream
+      run: |
+        TAG_NAME=${GITHUB_REF#refs/tags/}
+        gh release upload "$TAG_NAME" \
+          target/${{ matrix.target }}/release/${{ matrix.artifact_name }}#${{ matrix.asset_name }}
