--- a/veracode-api/Cargo.toml
+++ b/veracode-api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "veracode-platform"
-version = "0.1.0-alpha.1"
+version = "0.1.0"
 edition = "2024"
 authors = ["Fred Nollows <frednollows@gmail.com>"]
 description = "A comprehensive Rust client library for the Veracode platform (Applications, Identity, Pipeline Scan, Sandbox)"
