--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -43,7 +43,7 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: verascan
+            artifact_name: verascan-linux
             asset_name: verascan-linux-amd64
           - os: windows-latest
             target: x86_64-pc-windows-msvc
@@ -51,7 +51,7 @@ jobs:
             asset_name: verascan-windows-amd64.exe
           - os: macos-latest
             target: x86_64-apple-darwin
-            artifact_name: verascan
+            artifact_name: verascan-mac
             asset_name: verascan-macos-amd64
     
     runs-on: ${{ matrix.os }}
