--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -41,22 +41,49 @@ jobs:
     strategy:
       matrix:
         include:
-          - target: x86_64-apple-darwin
-            archive: zip
-          - target: x86_64-pc-windows-gnu
-            archive: zip
-          - target: x86_64-unknown-linux-musl
-            archive: tar.gz
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            binary_name: verascan
+            asset_name: verascan-linux-musl-amd64
+          - os: windows-latest
+            target: x86_64-pc-windows-gnu
+            binary_name: verascan.exe
+            asset_name: verascan-windows-gnu-amd64.exe
+          - os: macos-latest
+            target: x86_64-apple-darwin
+            binary_name: verascan
+            asset_name: verascan-macos-amd64
     
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     
     steps:
     - uses: actions/checkout@v4
     
-    - name: Build and Release
-      uses: rust-build/rust-build.action@v1.4.5
+    - name: Setup Rust
+      uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: ${{ matrix.target }}
+    
+    - name: Install cross-compilation dependencies
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y musl-tools musl-dev
+    
+    - name: Install mingw-w64 for Windows GNU target
+      if: matrix.os == 'windows-latest'
+      run: |
+        # Install mingw-w64 via chocolatey
+        choco install mingw
+    
+    - name: Build release binary
+      run: cargo build --release --target ${{ matrix.target }}
+    
+    - name: Upload Release Asset
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        RUSTTARGET: ${{ matrix.target }}
-        ARCHIVE_TYPES: ${{ matrix.archive }}
+      run: |
+        TAG_NAME=${GITHUB_REF#refs/tags/}
+        gh release upload "$TAG_NAME" \
+          target/${{ matrix.target }}/release/${{ matrix.binary_name }} \
+          --clobber
