--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -68,7 +68,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y musl-tools musl-dev
+        sudo apt-get install -y musl-tools musl-dev pkg-config libssl-dev
     
     - name: Install mingw-w64 for Windows GNU target
       if: matrix.os == 'windows-latest'
