--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -38,6 +38,8 @@ jobs:
 
   build:
     needs: create-release
+    permissions:
+      contents: write
     strategy:
       matrix:
         include:
@@ -68,7 +70,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y musl-tools musl-dev pkg-config libssl-dev
+        sudo apt-get install -y musl-tools musl-dev pkg-config libssl-dev openssl
     
     - name: Install mingw-w64 for Windows GNU target
       if: matrix.os == 'windows-latest'
