--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -79,6 +79,8 @@ jobs:
         choco install mingw
     
     - name: Build release binary
+      env:
+        OPENSSL_DIR: ${{ matrix.os == 'ubuntu-latest' && '/usr/lib/ssl' || matrix.os == 'macos-latest' && '/usr/local/opt/openssl' || '' }}
       run: cargo build --release --target ${{ matrix.target }}
     
     - name: Create zip archive
