--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -62,15 +62,11 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Setup Rust
-      uses: dtolnay/rust-toolchain@stable
+      uses: actions-rs/toolchain@v1
       with:
         targets: ${{ matrix.target }}
-    
-    - name: Install cross-compilation dependencies
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y pkg-config libssl-dev openssl build-essential
+        toolchain: stable
+        override: true
     
     - name: Install mingw-w64 for Windows GNU target
       if: matrix.os == 'windows-latest'
