Adjusted workflow for work with the rust-build project.

--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -67,7 +67,7 @@ jobs:
         targets: ${{ matrix.target }}
         toolchain: stable
         override: true
-    
+        target: x86_64-apple-darwin    
     - name: Install mingw-w64 for Windows GNU target
       if: matrix.os == 'windows-latest'
       run: |
