--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -59,6 +59,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Install Linux dependencies
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential ca-certificates
+    
     - name: Setup Rust
       uses: actions-rs/toolchain@v1
       with:
