--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -89,7 +89,7 @@ jobs:
         cd target/${{ matrix.target }}/release/
         7z a ../../../${{ matrix.asset_name }}.zip ${{ matrix.binary_name }}
 
-    - name: Create zip archive Windows
+    - name: Create zip archive Linux/Mac
       if: matrix.os != 'windows-latest'
       run: |
         cd target/${{ matrix.target }}/release/
@@ -98,6 +98,7 @@ jobs:
     - name: Upload Release Asset
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      shell: bash
       run: |
         TAG_NAME=${GITHUB_REF#refs/tags/}
         gh release upload "$TAG_NAME" \
