--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -38,21 +38,23 @@ jobs:
 
   build:
     needs: create-release
+    permissions:
+      contents: write
     strategy:
       matrix:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: verascan-linux
-            asset_name: verascan-linux-amd64
+            binary_name: verascan
+            asset_name: verascan-linux-gnu-amd64
           - os: windows-latest
-            target: x86_64-pc-windows-msvc
-            artifact_name: verascan.exe
-            asset_name: verascan-windows-amd64.exe
+            target: x86_64-pc-windows-gnu
+            binary_name: verascan.exe
+            asset_name: verascan-windows-gnu-amd64.exe
           - os: macos-latest
-            target: x86_64-apple-darwin
-            artifact_name: verascan-mac
-            asset_name: verascan-macos-amd64
+            target: aarch64-apple-darwin
+            binary_name: verascan
+            asset_name: verascan-macos-arm64
     
     runs-on: ${{ matrix.os }}
     
@@ -68,35 +70,42 @@ jobs:
     - name: Setup Rust
       uses: actions-rs/toolchain@v1
       with:
+        targets: ${{ matrix.target }}
         toolchain: stable
         override: true
-        target: ${{ matrix.target }}
-    
-    - name: Cache cargo registry
-      uses: actions/cache@v3
-      with:
-        path: ~/.cargo/registry
-        key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-    
-    - name: Cache cargo index
-      uses: actions/cache@v3
-      with:
-        path: ~/.cargo/git
-        key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
-    
-    - name: Cache cargo build
-      uses: actions/cache@v3
-      with:
-        path: target
-        key: ${{ runner.os }}-${{ matrix.target }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+
+    - name: Install build-essential for Linux
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential libssl-dev pkg-config
+
+    - name: Install mingw-w64 for Windows GNU target
+      if: matrix.os == 'windows-latest'
+      run: |
+        # Install mingw-w64 via chocolatey
+        choco install mingw
     
     - name: Build release binary
       run: cargo build --release --target ${{ matrix.target }}
     
+    - name: Create zip archive Windows
+      if: matrix.os == 'windows-latest'
+      run: |
+        cd target/${{ matrix.target }}/release/
+        7z a ../../../${{ matrix.asset_name }}.zip ${{ matrix.binary_name }}
+
+    - name: Create zip archive Linux/Mac
+      if: matrix.os != 'windows-latest'
+      run: |
+        cd target/${{ matrix.target }}/release/
+        zip ../../../${{ matrix.asset_name }}.zip ${{ matrix.binary_name }}
+    
     - name: Upload Release Asset
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      shell: bash
       run: |
         TAG_NAME=${GITHUB_REF#refs/tags/}
         gh release upload "$TAG_NAME" \
-          target/${{ matrix.target }}/release/${{ matrix.artifact_name }}#${{ matrix.asset_name }}
+          ${{ matrix.asset_name }}.zip
