--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -25,7 +25,8 @@ jobs:
         BODY="## Multi-Platform Release
 
         This release includes binaries for:
-        - Linux (x86_64)
+        - Linux (x86_64 glibc)
+        - Linux (x86_64 musl)
         - Windows (x86_64)
         - macOS (x86_64)
 
@@ -47,6 +48,10 @@ jobs:
             target: x86_64-unknown-linux-gnu
             binary_name: verascan
             asset_name: verascan-linux-gnu-amd64
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            binary_name: verascan
+            asset_name: verascan-linux-musl-amd64
           - os: windows-latest
             target: x86_64-pc-windows-gnu
             binary_name: verascan.exe
@@ -66,6 +71,11 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential ca-certificates
+        
+    - name: Install musl tools for musl target
+      if: matrix.target == 'x86_64-unknown-linux-musl'
+      run: |
+        sudo apt-get install -y musl-tools musl-dev
     
     - name: Setup Rust
       uses: actions-rs/toolchain@v1
