--- a/veracode-api/Cargo.toml
+++ b/veracode-api/Cargo.toml
@@ -23,7 +23,7 @@ path = "src/lib.rs"
 
 [dependencies]
 # HTTP client and serialization
-reqwest = { version = "0.12", features = ["json", "multipart"] }
+reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls-native-roots"], default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
