--- a/verascan/Cargo.toml
+++ b/verascan/Cargo.toml
@@ -39,8 +39,8 @@ chrono = { version = "0.4", features = ["serde"] }
 # UUID generation for GitLab vulnerability IDs
 uuid = { version = "1.0", features = ["v4"] }
 
-# HTTP client for GitLab API integration
-reqwest = { version = "0.12", features = ["json"] }
+# HTTP client for GitLab API integration  
+reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
 
 # URL encoding for GitLab search queries
 urlencoding = "2.1"
