--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -84,8 +84,8 @@ jobs:
         toolchain: stable
         override: true
 
-    - name: Install build-essential for Linux
-      if: matrix.os == 'ubuntu-latest'
+    - name: Install build-essential for glibc Linux
+      if: matrix.target == 'x86_64-unknown-linux-gnu'
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential libssl-dev pkg-config
