--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,6 +2,4 @@
 [target.x86_64-unknown-linux-musl]
 rustflags = ["-C", "target-feature=+crt-static"]
 
-# Static linking for glibc (requires specific libraries)
-[target.x86_64-unknown-linux-gnu]
-rustflags = ["-C", "target-feature=+crt-static", "-C", "link-arg=-static-libgcc"]
+# Dynamic linking for glibc (proc-macros work, requires runtime libraries)
