feat(musl): Updated actions to test the mutiplatform builds.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,10 +54,12 @@ jobs:
     - name: Setup Rust
       uses: actions-rs/toolchain@v1
       with:
-        targets: ${{ matrix.target }}
         toolchain: stable
         override: true
         components: rustfmt, clippy
+        
+    - name: Add target
+      run: rustup target add ${{ matrix.target }}
     
     - name: Cache cargo registry
       uses: actions/cache@v3
