feat: Updated documentation with recorded changes.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,19 +65,19 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ~/.cargo/registry
-        key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-${{ matrix.target }}-cargo-registry-${{ hashFiles('Cargo.lock') }}
     
     - name: Cache cargo index
       uses: actions/cache@v3
       with:
         path: ~/.cargo/git
-        key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-${{ matrix.target }}-cargo-index-${{ hashFiles('Cargo.lock') }}
     
     - name: Cache cargo build
       uses: actions/cache@v3
       with:
         path: target
-        key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-${{ matrix.target }}-cargo-build-target-${{ hashFiles('Cargo.lock') }}
     
     - name: Check formatting (Linux only)
       if: matrix.target == 'x86_64-unknown-linux-gnu'
