fix(doc): Fixed licensing to align with MIT and APACHE.

--- a/veracode-api/Cargo.toml
+++ b/veracode-api/Cargo.toml
@@ -7,7 +7,7 @@ description = "A comprehensive Rust client library for the Veracode platform (Ap
 documentation = "https://docs.rs/veracode-platform"
 repository = "https://github.com/tastyfrankfurt/veracode-platform"
 homepage = "https://github.com/tastyfrankfurt/veracode-platform"
-license = "Apache-2.0"
+license = "MIT OR Apache-2.0"
 keywords = ["veracode", "security", "platform", "static-analysis", "vulnerability"]
 categories = ["api-bindings", "web-programming::http-client", "development-tools"]
 readme = "README.md"
