--- a/verascan/Cargo.toml
+++ b/verascan/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Fred Nollows <frednollows@gmail.com>"]
 description = "A comprehensive Rust client application for the Veracode platform to support pipeline, sandbox and policy scan submission and reporting."
 documentation = "https://docs.rs/veracode-platform"
 repository = "https://github.com/tastyfrankfurt/veracode-platform"
-license = "Apache-2.0"
+license = "MIT OR Apache-2.0"
 keywords = ["veracode", "security", "platform", "static-analysis", "vulnerability"]
 categories = ["scanning", "web-programming::http-client", "development-tools"]
 readme = "README.md"
