--- a/verascan/Cargo.toml
+++ b/verascan/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "verascan"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2024"
 authors = ["Fred Nollows <frednollows@gmail.com>"]
 description = "A comprehensive Rust client application for the Veracode platform to support pipeline, sandbox and policy scan submission and reporting."
@@ -53,6 +53,11 @@ thiserror = "2.0"
 
 # Logging
 log = "0.4"
+env_logger = "0.11"
+
+# Vault client for secure credential management
+vaultrs = "0.7"
+backoff = "0.4"
 
 [dev-dependencies]
 tempfile = "3.20"
