--- a/veracode-api/Cargo.toml
+++ b/veracode-api/Cargo.toml
@@ -39,6 +39,9 @@ urlencoding = "2.1"
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "2.0"
 
+# Logging
+log = "0.4"
+
 # XML parsing for legacy API responses
 quick-xml = "0.38"
 
