fix: resolve policy scan upload and logging issues for 0.5.0 release
  - Fixed policy scan upload failure by correcting sandbox_id parameter
    Policy scans now properly set sandbox_id: None instead of incorrectly
    passing sandbox_legacy_id, resolving "Cannot prescan a build with no
    uploaded valid files" error

  - Cleaned up inconsistent poll attempt logging in assessment monitoring
    Removed empty code blocks around prescan/scan poll attempt messages
    that were causing intermittent logging behavior during monitoring phases

  - Added comprehensive credential usage example demonstrating ARC-based
    thread-safe credential sharing across components

  - Updated vault client exports removing unused functions for cleaner API

  This captures the two main functional fixes:
  1. Policy scan upload bug - the critical fix for sandbox_id parameter
  2. Logging consistency - cleaning up the poll attempt message issues

--- a/verascan/Cargo.toml
+++ b/verascan/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "verascan"
-version = "0.4.2"
+version = "0.5.0"
 edition = "2024"
 authors = ["Fred Nollows <frednollows@gmail.com>"]
 description = "A comprehensive Rust client application for the Veracode platform to support pipeline, sandbox and policy scan submission and reporting."
@@ -54,6 +54,9 @@ thiserror = "2.0"
 # Logging
 log = "0.4"
 env_logger = "0.11"
+
+# Security - for secure credential handling
+secrecy = { version = "0.10", features = ["serde"] }
 
 # Vault client for secure credential management
 vaultrs = "0.7"
