--- a/veracode-api/Cargo.toml
+++ b/veracode-api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "veracode-platform"
-version = "0.4.2"
+version = "0.5.0"
 edition = "2024"
 authors = ["Fred Nollows <frednollows@gmail.com>"]
 description = "A comprehensive Rust client library for the Veracode platform (Applications, Identity, Pipeline Scan, Sandbox)"
@@ -42,6 +42,9 @@ thiserror = "2.0"
 # Logging
 log = "0.4"
 
+# Security - for secure credential handling
+secrecy = { version = "0.10", features = ["serde"] }
+
 # XML parsing for legacy API responses
 quick-xml = "0.38"
 
@@ -82,3 +85,7 @@ required-features = ["sandbox"]
 [[example]]
 name = "policy_lifecycle"
 required-features = ["policy"]
+
+[[example]]
+name = "credentials_example"
+required-features = ["applications"]
