Fix Policy Scan Upload and Logging Issues
* fix(doc): Fixed licensing to align with MIT and APACHE.

* feat(export): Added feature export.

* feat(export): Added feature export.

* fix: Resolved issues with gitlab export as assessment format different to pipeline format for gitlab reports.

* fix: Updated versions

* fix: Updated versions

* Added Hashicorp Vault support for JWT token auth.

* Added Hashicorp Vault support for JWT token auth.

* fix: updated logging to use log crate and removed println and eprintln macro usage for better logging output.

* fix: updated logging to use log crate and removed println and eprintln macro usage for better logging output.

* fix: resolve policy scan upload and logging issues for 0.5.0 release

  - Fixed policy scan upload failure by correcting sandbox_id parameter
    Policy scans now properly set sandbox_id: None instead of incorrectly
    passing sandbox_legacy_id, resolving "Cannot prescan a build with no
    uploaded valid files" error

  - Cleaned up inconsistent poll attempt logging in assessment monitoring
    Removed empty code blocks around prescan/scan poll attempt messages
    that were causing intermittent logging behavior during monitoring phases

  - Added comprehensive credential usage example demonstrating ARC-based
    thread-safe credential sharing across components

  - Updated vault client exports removing unused functions for cleaner API

  This captures the two main functional fixes:
  1. Policy scan upload bug - the critical fix for sandbox_id parameter
  2. Logging consistency - cleaning up the poll attempt message issues

* Resolved formating issues.

* Resolve linting issues preventing builds.

* Clean up of debug logging.

* fix: correct cli version for verascan

* feat: add configurable Vault auth path support

  Add VAULT_CLI_AUTH_PATH environment variable to support custom Vault
  authentication paths for different auth methods (JWT, OIDC, Kubernetes, etc).

  Changes:
  - Add auth_path field t

--- a/veracode-api/Cargo.toml
+++ b/veracode-api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "veracode-platform"
-version = "0.3.1"
+version = "0.5.0"
 edition = "2024"
 authors = ["Fred Nollows <frednollows@gmail.com>"]
 description = "A comprehensive Rust client library for the Veracode platform (Applications, Identity, Pipeline Scan, Sandbox)"
@@ -38,6 +38,12 @@ url = "2.4"
 urlencoding = "2.1"
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "2.0"
+
+# Logging
+log = "0.4"
+
+# Security - for secure credential handling
+secrecy = { version = "0.10", features = ["serde"] }
 
 # XML parsing for legacy API responses
 quick-xml = "0.38"
@@ -79,3 +85,7 @@ required-features = ["sandbox"]
 [[example]]
 name = "policy_lifecycle"
 required-features = ["policy"]
+
+[[example]]
+name = "credentials_example"
+required-features = ["applications"]
