--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,16 +11,12 @@ jobs:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            binary_name: verascan
           - os: ubuntu-latest
             target: x86_64-unknown-linux-musl
-            binary_name: verascan
           - os: windows-latest
             target: x86_64-pc-windows-gnu
-            binary_name: verascan.exe
           - os: macos-latest
             target: aarch64-apple-darwin
-            binary_name: verascan
     
     runs-on: ${{ matrix.os }}
     
@@ -95,8 +91,9 @@ jobs:
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: test-${{ matrix.target }}-${{ matrix.binary_name }}
+        name: binaries-${{ matrix.target }}
         path: |
-          target/${{ matrix.target }}/release/${{ matrix.binary_name }}
+          target/${{ matrix.target }}/release/verascan${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+          target/${{ matrix.target }}/release/veracmek${{ matrix.os == 'windows-latest' && '.exe' || '' }}
           README.md
         retention-days: 7
