--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -24,11 +24,15 @@ jobs:
         RELEASE_NAME="Release $TAG_NAME"
         BODY="## Multi-Platform Release
 
-        This release includes binaries for:
+        This release includes binaries for both verascan and veracmek:
         - Linux (x86_64 glibc)
         - Linux (x86_64 musl)
         - Windows (x86_64)
-        - macOS (x86_64)
+        - macOS (ARM64)
+
+        **Tools included:**
+        - **verascan**: CLI security scanning application
+        - **veracmek**: CLI Customer Managed Encryption Key (CMEK) management tool
 
         Download the appropriate binary for your platform."
         
@@ -44,6 +48,7 @@ jobs:
     strategy:
       matrix:
         include:
+          # verascan builds
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             binary_name: verascan
@@ -60,6 +65,23 @@ jobs:
             target: aarch64-apple-darwin
             binary_name: verascan
             asset_name: verascan-macos-arm64
+          # veracmek builds
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            binary_name: veracmek
+            asset_name: veracmek-linux-gnu-amd64
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            binary_name: veracmek
+            asset_name: veracmek-linux-musl-amd64
+          - os: windows-latest
+            target: x86_64-pc-windows-gnu
+            binary_name: veracmek.exe
+            asset_name: veracmek-windows-gnu-amd64.exe
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            binary_name: veracmek
+            asset_name: veracmek-macos-arm64
     
     runs-on: ${{ matrix.os }}
     
