feat(ci): Add independent versioning support with package-specific tags
  Enable independent versioning for workspace packages using tag format
  <package-name>/v<version> (e.g., verascan/v0.5.6, veracode-api/v0.5.6).

  Changes:
  - Update multiplatform.yml to trigger on package-specific tags
  - Parse package name and version from tag to create targeted releases
  - Build only the tagged package binaries (not all packages)
  - Add crates.io publishing job for library packages
  - Generate package-specific release notes automatically

  This allows each package (verascan, veracmek, veracode-api) to be
  released independently without unnecessary version bumps across the
  entire workspace.

  Or a shorter version:

  feat(ci): Enable independent versioning with package-specific tags

  Support independent package releases using <package-name>/v<version>
  tag format. Only builds and releases the tagged package, reducing
  CI time and enabling semantic versioning per package.

--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -156,6 +156,7 @@ jobs:
     # Skip this build if package doesn't match the tag
     - name: Check package match
       id: check_package
+      shell: bash
       run: |
         if [[ "${{ matrix.package }}" != "${{ needs.create-release.outputs.package_name }}" ]]; then
           echo "Skipping build for ${{ matrix.package }} (tagged package is ${{ needs.create-release.outputs.package_name }})"
