feat(ci): Enable independent versioning with package-specific tags
  Support independent package releases using <package-name>/v<version>
  tag format. Only builds and releases the tagged package, reducing
  CI time and enabling semantic versioning per package.

  Fixes workspace target paths and ensures bash shell compatibility
  across Windows/Linux/macOS runners

--- a/.github/workflows/multiplatform.yml
+++ b/.github/workflows/multiplatform.yml
@@ -205,21 +205,20 @@ jobs:
 
     - name: Build release binary
       if: steps.check_package.outputs.skip != 'true'
-      run: |
-        cd ${{ matrix.package }}
-        cargo build --release --target ${{ matrix.target }}
+      run: cargo build --release --target ${{ matrix.target }} -p ${{ matrix.package }}
 
     - name: Create zip archive Windows
       if: matrix.os == 'windows-latest' && steps.check_package.outputs.skip != 'true'
+      shell: bash
       run: |
-        cd ${{ matrix.package }}/target/${{ matrix.target }}/release/
-        7z a ../../../../${{ matrix.asset_name }}.zip ${{ matrix.binary_name }}
+        cd target/${{ matrix.target }}/release/
+        7z a ../../../${{ matrix.asset_name }}.zip ${{ matrix.binary_name }}
 
     - name: Create zip archive Linux/Mac
       if: matrix.os != 'windows-latest' && steps.check_package.outputs.skip != 'true'
       run: |
-        cd ${{ matrix.package }}/target/${{ matrix.target }}/release/
-        zip ../../../../${{ matrix.asset_name }}.zip ${{ matrix.binary_name }}
+        cd target/${{ matrix.target }}/release/
+        zip ../../../${{ matrix.asset_name }}.zip ${{ matrix.binary_name }}
 
     - name: Upload Release Asset
       if: steps.check_package.outputs.skip != 'true'
